--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <title>Battleship</title>
+    <title>Sea Battle</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
 
